fix whitespace

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3586,7 +3586,7 @@
 		}
 
 		#main > .post {
-			padding: 4rem 4rem 2rem 2rem ;
+			padding: 4rem 4rem 2rem 4rem ;
 		}
 
 			#main > .post header.major > .date {
